[project]
name = "VinEspana"
version = "0.1.0"
description = "VinEspaña est une application Python utilisant Tkinter et CustomTkinter, offrant une exploration interactive des régions viticoles espagnoles. Les utilisateurs sélectionnent les régions via des boutons, affichant les coordonnées GPS et des icônes de bouteilles de vin rouge ou blanc. Une manière ludique de découvrir la diversité viticole de l'Espagne."
authors = [
    {name = "Macktireh", email = "abdimack97@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.12.*"
dependencies = [
    "customtkinter>=5.2.2",
    "tkintermapview>=1.29",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.8",
]


[tool.pdm]
distribution = false


[tool.pdm.scripts]
start = "python main.py"


[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

